css/styles.css
* {
    box-sizing: border-box;
}

body {
	margin: 0px;
	font-family: 'Inconsolata', monospace;
	color: #f7f7f7;
}

body a {
	color: white;
    text-decoration: underline;
}

body a:hover {
	text-decoration: none;
}

h1 {
	font-family: 'Montserrat', sans-serif;
}

.content {
	background-image: url("../img/carolyn_bg_dim_full.jpg");
	background-repeat: no-repeat;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-color: black;
    height: 100vh;
}

.about {
	padding-top: 45vh;
	padding-left: 25px;
	padding-right: 25px;
    padding-bottom: 10px;
    height: 100vh;
    overflow: scroll;
    -webkit-overflow-scrolling: touch;
}

.about h1 {
	font-size: 5em;
} 

.about p {
	margin-left: 10px;
	margin-right: 10px;
	margin-top: 5px;
    margin-bottom: 10px;
}

 /*laptop*/
@media (min-width: 992px) {
	.content {
		background-image: url("../img/carolyn_bg.jpg");
		-webkit-background-size: contain;
	    -moz-background-size: contain;
	    -o-background-size: contain;
	    background-size: contain;
	    background-color: white;
	}
	.about {
	    padding-top: 0px;
	    padding-bottom: 0px;
	    background-color: white;
	    width: 55%;
	    padding-left: 50px;
	    color: #50556C;
	    height: 100vh;
	    position: absolute;
	    right: 0;
	    overflow-y: scroll;
	}
	.about h1 {
		color: #257899;
	}
	body a {
		color: #50556C;
	    text-decoration: underline;
		}
	}
}

